[gd_scene load_steps=11 format=3 uid="uid://ygb05qawriwh"]

[ext_resource type="Script" uid="uid://e0nun6mx1aou" path="res://scripts/main/unit_info.gd" id="1_j6bet"]
[ext_resource type="Script" uid="uid://c1o8tsdvtkydf" path="res://scripts/main/game_manager.gd" id="2_57akw"]
[ext_resource type="Script" uid="uid://vwqdce8l4gp0" path="res://scripts/ui/hud.gd" id="3_vbg7o"]
[ext_resource type="Script" uid="uid://dokd1icoe8c62" path="res://scripts/campaign map/player_marker.gd" id="4_osw1o"]
[ext_resource type="PackedScene" uid="uid://ccj00txght02n" path="res://scenes/campaign map/location.tscn" id="5_xsca3"]
[ext_resource type="PackedScene" uid="uid://b6kq0ugyjc2mj" path="res://scenes/ui/reward.tscn" id="6_y2ajb"]
[ext_resource type="Script" uid="uid://d3110uqv04vma" path="res://scripts/ui/unit_button.gd" id="7_qa38x"]
[ext_resource type="PackedScene" uid="uid://c4ncj5ewtvx0p" path="res://scenes/ui/roster_unit.tscn" id="8_57akw"]
[ext_resource type="Texture2D" uid="uid://dtpa1tam2fmgh" path="res://icon.svg" id="8_vbg7o"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4msxo"]
size = Vector2(40, 40)

[node name="Game" type="Node2D"]

[node name="UnitInfo" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_j6bet")

[node name="Game Manager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_57akw")

[node name="TurnTimer" type="Timer" parent="Game Manager"]
wait_time = 0.25
one_shot = true

[node name="LevelEndTimer" type="Timer" parent="Game Manager"]
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("3_vbg7o")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="Actions" type="HBoxContainer" parent="HUD"]
unique_name_in_owner = true
offset_right = 1152.0

[node name="Move" type="Button" parent="HUD/Actions"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Attack" type="Button" parent="HUD/Actions"]
visible = false
layout_mode = 2

[node name="Heal" type="Button" parent="HUD/Actions"]
visible = false
layout_mode = 2

[node name="End" type="Button" parent="HUD/Actions"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "End Turn"

[node name="Campaign Map" type="Node2D" parent="." groups=["Campaign Map"]]
unique_name_in_owner = true

[node name="Player Marker" type="Area2D" parent="Campaign Map"]
unique_name_in_owner = true
position = Vector2(702, 577)
script = ExtResource("4_osw1o")

[node name="ColorRect" type="ColorRect" parent="Campaign Map/Player Marker"]
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Campaign Map/Player Marker"]
shape = SubResource("RectangleShape2D_4msxo")

[node name="Distance Label" type="Label" parent="Campaign Map/Player Marker" groups=["Unit Distance Info"]]
visible = false
offset_left = -20.0
offset_top = 22.0
offset_right = 20.0
offset_bottom = 45.0

[node name="Warning Label" type="Label" parent="Campaign Map/Player Marker" groups=["Unit Distance Info"]]
visible = false
offset_left = -19.0
offset_top = 46.0
offset_right = 21.0
offset_bottom = 69.0

[node name="Cooldown" type="Timer" parent="Campaign Map/Player Marker"]
wait_time = 0.25
one_shot = true

[node name="Map Movement Line" type="Line2D" parent="Campaign Map" groups=["Unit Distance Info"]]
visible = false
points = PackedVector2Array(0, 0, 0, 0)

[node name="Location" parent="Campaign Map" instance=ExtResource("5_xsca3")]
position = Vector2(644, 570)
level = "res://scenes/levels/level_1.tscn"

[node name="Location2" parent="Campaign Map" instance=ExtResource("5_xsca3")]
position = Vector2(639, 448)
level = "res://scenes/levels/level_1.tscn"

[node name="Location3" parent="Campaign Map" instance=ExtResource("5_xsca3")]
position = Vector2(519, 386)
level = "res://scenes/levels/level_1.tscn"

[node name="Shop" type="CanvasLayer" parent="."]
visible = false

[node name="Reward Screen" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="Reward Screen"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Rewards" type="HBoxContainer" parent="Reward Screen"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reward" parent="Reward Screen/Rewards" instance=ExtResource("6_y2ajb")]
layout_mode = 2

[node name="Reward2" parent="Reward Screen/Rewards" instance=ExtResource("6_y2ajb")]
layout_mode = 2

[node name="Reward3" parent="Reward Screen/Rewards" instance=ExtResource("6_y2ajb")]
layout_mode = 2

[node name="Level Up" type="CanvasLayer" parent="."]
visible = false

[node name="Loadout" type="CanvasLayer" parent="."]
visible = false

[node name="Campaign Unit Select" type="CanvasLayer" parent="." groups=["Campaign Map"]]

[node name="Unit Holder" type="VBoxContainer" parent="Campaign Unit Select"]
unique_name_in_owner = true
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="Unit 1" type="TextureButton" parent="Campaign Unit Select/Unit Holder"]
layout_mode = 2
script = ExtResource("7_qa38x")
unit_name = "Amigol"

[node name="Unit 2" type="TextureButton" parent="Campaign Unit Select/Unit Holder"]
layout_mode = 2
texture_normal = ExtResource("8_vbg7o")
script = ExtResource("7_qa38x")

[node name="Unit 3" type="TextureButton" parent="Campaign Unit Select/Unit Holder"]
layout_mode = 2
texture_normal = ExtResource("8_vbg7o")
script = ExtResource("7_qa38x")

[node name="Unit 4" type="TextureButton" parent="Campaign Unit Select/Unit Holder"]
layout_mode = 2
texture_normal = ExtResource("8_vbg7o")
script = ExtResource("7_qa38x")

[node name="Unit Roster" type="HBoxContainer" parent="Campaign Unit Select"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0

[node name="RosterUnit" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2
unit_name = "Amigol"

[node name="RosterUnit2" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2

[node name="RosterUnit3" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2

[node name="RosterUnit4" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2

[node name="RosterUnit5" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2

[node name="RosterUnit6" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2

[node name="RosterUnit7" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2

[node name="RosterUnit8" parent="Campaign Unit Select/Unit Roster" instance=ExtResource("8_57akw")]
layout_mode = 2

[node name="UnitDesc" type="VBoxContainer" parent="Campaign Unit Select"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="RemoveFromSquad" type="Button" parent="Campaign Unit Select/UnitDesc"]
visible = false
layout_mode = 2
text = "Remove Unit From Squad"

[node name="Label" type="Label" parent="Campaign Unit Select/UnitDesc"]
layout_mode = 2

[connection signal="timeout" from="Game Manager/TurnTimer" to="Game Manager" method="_on_turn_timer_timeout"]
[connection signal="timeout" from="Game Manager/LevelEndTimer" to="Game Manager" method="_on_level_end_timer_timeout"]
[connection signal="pressed" from="HUD/Actions/Move" to="HUD" method="_on_move_pressed"]
[connection signal="pressed" from="HUD/Actions/Attack" to="HUD" method="_on_attack_pressed"]
[connection signal="pressed" from="HUD/Actions/End" to="HUD" method="_on_end_pressed"]
[connection signal="input_event" from="Campaign Map/Player Marker" to="Campaign Map/Player Marker" method="_on_input_event"]
[connection signal="pressed" from="Campaign Unit Select/Unit Holder/Unit 1" to="Campaign Unit Select/Unit Holder/Unit 1" method="_on_pressed"]
[connection signal="pressed" from="Campaign Unit Select/Unit Holder/Unit 2" to="Campaign Unit Select/Unit Holder/Unit 2" method="_on_pressed"]
[connection signal="pressed" from="Campaign Unit Select/Unit Holder/Unit 3" to="Campaign Unit Select/Unit Holder/Unit 3" method="_on_pressed"]
[connection signal="pressed" from="Campaign Unit Select/Unit Holder/Unit 4" to="Campaign Unit Select/Unit Holder/Unit 4" method="_on_pressed"]
[connection signal="pressed" from="Campaign Unit Select/UnitDesc/RemoveFromSquad" to="Campaign Unit Select/Unit Holder/Unit 1" method="_on_remove_from_squad_pressed"]
[connection signal="pressed" from="Campaign Unit Select/UnitDesc/RemoveFromSquad" to="Campaign Unit Select/Unit Holder/Unit 2" method="_on_remove_from_squad_pressed"]
[connection signal="pressed" from="Campaign Unit Select/UnitDesc/RemoveFromSquad" to="Campaign Unit Select/Unit Holder/Unit 3" method="_on_remove_from_squad_pressed"]
[connection signal="pressed" from="Campaign Unit Select/UnitDesc/RemoveFromSquad" to="Campaign Unit Select/Unit Holder/Unit 4" method="_on_remove_from_squad_pressed"]
